# benchmark-ctrs

./: .gitignore  LICENSE  pyproject.toml
.github/: copilot-instructions.md
src/benchmark_ctrs/: __init__.py  types.py  utilities.py
src/benchmark_ctrs/callbacks/: __init__.py  certified_radius_writer.py
src/benchmark_ctrs/certification/: __init__.py  abc.py  parameters.py  rs_certification.py  sequence_certification.py  utils.py
src/benchmark_ctrs/certification/sequence/: __init__.py  _utils.py  base.py  betting.py  union_bound.py
src/benchmark_ctrs/cli/: __main__.py  _default_plugin.py  default_config_fit.yml  default_config_predict.yml  parameters.py  plugins.py
src/benchmark_ctrs/criterions/: __init__.py
src/benchmark_ctrs/dataset/: __init__.py  wrapper.py
src/benchmark_ctrs/datasets/: __init__.py  cifar10.py  classification_module.py  imagenet.py  mnist.py  module.py
src/benchmark_ctrs/metrics/: __init__.py  certified_radius.py
src/benchmark_ctrs/model/: __init__.py  normalization.py  wrapper.py
src/benchmark_ctrs/model/architectures/: cifar_resnet.py  lenet.py
src/benchmark_ctrs/models/: __init__.py  cifar_resnet.py  layers.py  lenet.py  resnet.py  smooth.py
src/benchmark_ctrs/modules/: __init__.py  adre.py  gaussian_aug.py  macer.py  module.py  rs_training.py  standard.py
src/benchmark_ctrs/modules/standard/: __init__.py  cifar.py  imagenet.py  mnist.py  module.py
src/benchmark_ctrs/plugins/: __init__.py  spec.py
src/benchmark_ctrs/training/: __init__.py  checkpoint.py  metrics.py  parameters.py  run.py
src/benchmark_ctrs/training/cli/: __init__.py  command.py  method_command.py  methods.py  parameters.py
src/benchmark_ctrs/training/methods/: __init__.py  abc.py  adre.py  custom.py  macer.py  noop.py  standard.py
src/benchmark_ctrs/utils/: __init__.py  acc.py
